--- a/app/styles/_jqui.scss
+++ b/app/styles/_jqui.scss
@@ -186,3 +186,6 @@ body .ui-tooltip { border-width:2px; }
     margin: 0;
     padding: 0.3em;
 }
+.ui-menu-item {
+  text-transform: capitalize;
+}
