--- a/styles/56920314.main.css
+++ b/styles/56920314.main.css
@@ -357,7 +357,7 @@ body {
   box-shadow: 0 0 0 1px #3f2f1a inset;
 }
 
-.main {
+.main, .about-main {
   padding: 11px 7px;
   background: #8f714a;
 }
