--- a/styles/56920314.main.css
+++ b/styles/56920314.main.css
@@ -357,8 +357,8 @@ body {
   padding: 11px 7px;
   background: #8f714a;
 }
-#about-cont .main {
-  padding-top: 20px;
+.about-main {
+  padding: 78px 7px 7px 15px !important;
 }
 
 .entry {
